### Update version of the sofware (HEAD -> main)
>Tue, 9 Jul 2024 16:38:07 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Upgrade software version (tag: 1.2.0)
>Tue, 9 Jul 2024 16:37:12 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Set an error message for IAU bridge when an error happens as expected by OGC Naming Update Tests Fix code to load project metadata
>Tue, 9 Jul 2024 16:33:43 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add patch version (origin/main, origin/HEAD)
>Thu, 4 Jul 2024 16:07:08 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix docker compose (tag: 1.1.1)
>Thu, 4 Jul 2024 16:05:41 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### FixDokerfile
>Thu, 27 Jun 2024 04:12:56 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Fix dockerfile
>Thu, 27 Jun 2024 03:58:42 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Again a try
>Thu, 27 Jun 2024 01:53:59 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Test create docker ftom github
>Thu, 27 Jun 2024 01:49:50 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)